# data-room-app

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 32194587e9bd_increase_avatar_url_length.py  9c7dc1e8dabe_initial_migrations.py  a1e86dcb086f_change_google_token_expires_at_to_.py
backend/api/: auth.py  files.py  routers.py
backend/app/: db.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  base.py  file.py  file_access_log.py  user.py  user_audit_log.py  user_role.py
backend/app/services/: file_storage.py  google_drive.py
backend/core/: config.py
backend/migrations/: 0001_init.sql
backend/tests/: README.md  conftest.py
backend/tests/integration/api/: test_auth.py  test_files.py
backend/tests/unit/api/: test_auth.py  test_files.py
backend/tests/unit/app/: test_deps.py  test_file_storage.py  test_google_drive.py  test_security.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/api/: auth.js  client.js  files.js
frontend/src/components/: Auth.css  Auth.js  Register.js
