[tool.poetry]
name = "dataroom"
version = "0.1.0"
description = "FastAPI backend for MVP Data Room"
authors = ["Aleksandr", "94639744+ls500pymaster@users.noreply.github.com"]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.121.3"
pydantic = "^2.12.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
python-dotenv = "^1.2.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.20.0"
email-validator = "^2.2.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.152.0"
requests = "^2.32.0"
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"